--- a/preamble.tex
+++ b/preamble.tex
@@ -85,6 +85,7 @@
 \newcommand{\conv}{\operatorname{conv}}
 \newcommand{\cone}{\operatorname{cone}}
 \newcommand{\rb}{\operatorname{rb}}
+\newcommand{\rs}{\operatorname{rs}}
 \newcommand{\ri}{\operatorname{ri}}
 
 %euclidean space
@@ -120,6 +121,7 @@
 \newcommand{\graph}{\mathcal{S}}
 \newcommand{\sierp}{\mathscr{S}}
 \newcommand{\fip}{\Sigma}
+\DeclareMathOperator{\sprouts}{sp}
 \newcommand{\sproutsfrom}[2]{#1 \leftarrow #2}
 %\newcommand{\sproutsfrom}[2]{#1 \in \operatorname{sp} #2}
 
